--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "type": "commonjs",
   "dependencies": {
     "@supabase/supabase-js": "^2.56.0",
-    "dotenv": "^17.2.1"
+    "dotenv": "^17.2.1",
+    "openai": "^5.16.0"
   },
   "devDependencies": {
     "@types/node": "^24.3.0",
