--- a/package.json
+++ b/package.json
@@ -37,6 +37,9 @@
 	},
 	"dependencies": {
 		"@fontsource-variable/inconsolata": "^5.2.6",
-		"firebase-admin": "^13.5.0"
+		"@supabase/supabase-js": "^2.57.2",
+		"dotenv": "^17.2.2",
+		"firebase-admin": "^13.5.0",
+		"openai": "^5.19.1"
 	}
 }
